@@ -264,6 +264,7 @@ Agent.prototype.captureError = function (err, opts, cb) {
   var res = opts && opts.response instanceof ServerResponse
     ? opts.response
     : trans && trans.res
+  var captureAttributes = opts && opts.captureAttributes
   var _isError = isError(err)
 
   if ((!opts || opts.handled !== false) &&
@@ -277,7 +278,7 @@ Agent.prototype.captureError = function (err, opts, cb) {
   if (!_isError) {
     prepareError(parsers.parseMessage(err))
   } else {
-    parsers.parseError(err, agent, function (_, error) {
+    parsers.parseError(err, captureAttributes, agent, function (_, error) {
       // As of now, parseError suppresses errors internally, but even if they
       // were passed on, we would want to suppress them here anyway
       prepareError(error)
