@@ -59,7 +59,19 @@ exports.parseStackTrace = function (err) {
   })
 }
 
-exports.parseError = function (err, agent, cb) {
+// `parseError` starts the serialization of the given Error instance into the
+// object to be sent to the APM server.
+//
+// APM error fields filled in are `error.exception` and `error.culprit`.
+//
+// By default, some properties on the given `err` (according to
+// https://github.com/watson/stackman/tree/master/#var-properties--stackmanpropertieserr)
+// are added to `error.exception.attributes`, unless overridden by
+// `captureAttributes === false`.
+// TODO: Consider changing this default to false in v4.0.0.
+exports.parseError = function (err, captureAttributes, agent, cb) {
+  captureAttributes = captureAttributes !== false
+
   stackman.callsites(err, function (_err, callsites) {
     if (_err) {
       agent.logger.debug('error while getting error callsites: %s', _err.message)
@@ -83,9 +95,11 @@ exports.parseError = function (err, agent, cb) {
       if (match) error.exception.code = match[1]
     }
 
-    var props = stackman.properties(err)
-    if (props.code) delete props.code // we already have it directly on the exception
-    if (Object.keys(props).length > 0) error.exception.attributes = props
+    if (captureAttributes) {
+      var props = stackman.properties(err)
+      if (props.code) delete props.code // we already have it directly on the exception
+      if (Object.keys(props).length > 0) error.exception.attributes = props
+    }
 
     var next = afterAll(function (_, frames) {
       // As of now, parseCallsite suppresses errors internally, but even if
