@@ -38,6 +38,10 @@ Notes:
 [float]
 ===== Features
 
+* feat: Add `captureAttributes` boolean option to `apm.captureError()` to
+  allow *disabling* the automatic capture of Error object properties. This
+  is useful for cases where those properties should not be sent to the APM
+  Server, e.g. for performance (large string fields) or security (PII data).
 * feat: Add `log_level` central config support. {pull}1908[#1908] +
   Spec: https://github.com/elastic/apm/blob/master/specs/agents/logging.md
 
